2apps/log_reader/manifests/service-output.yaml
apiVersion: v1
kind: Service
metadata:
  name: output-svc
spec:
  type: ClusterIP 
  selector:
    app: output-app
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 8080
